mp2a audio encoder not useable
Attempting to transcode using the mp2a codec always causes the following error:
[0161d420] stream_out_transcode stream out error: cannot find audio encoder (module:any fourcc:mp2a). Take a look few lines earlier to see possible reason. [0161d420] stream_out_transcode stream out error: cannot create audio chain [020c8b80] main decoder error: cannot create packetizer output (mpga)
It doesn't matter what format video/audio you are attempting to transcode from.
An Example transcode command line that causes the error looks like:
"C:\Program Files\VideoLAN\VLC\vlc.exe" --sout "#transcode{vcodec=mp2v,fps=30,vb=7000,acodec=mp2a,ab=224,samplerate=48000,channels=2,deinterlace}:std{access=file,mux=ps,dst="output.mpg"}" --sout-transcode-width 720 --sout-transcode-height 480 "C:\Movies\big_buck_bunny_1080p_stereo.avi" "vlc://quit"