Twolame: bump priority and accept mp2a fourcc

This restores compatibility with 1.1 command lines and docs

Close #6227