modules/codec/twolame.c
@@ -73,7 +73,7 @@ static const char *const ppsz_stereo_descriptions[] =
 vlc_module_begin ()
     set_shortname( "Twolame")
     set_description( N_("Libtwolame audio encoder") )
-    set_capability( "encoder", 50 )
+    set_capability( "encoder", 120 )
     set_callbacks( OpenEncoder, CloseEncoder )
     set_category( CAT_INPUT )
     set_subcategory( SUBCAT_INPUT_ACODEC )
@@ -132,6 +132,7 @@ static int OpenEncoder( vlc_object_t *p_this )
 
     if( p_enc->fmt_out.i_codec != VLC_CODEC_MP2 &&
         p_enc->fmt_out.i_codec != VLC_CODEC_MPGA &&
+        p_enc->fmt_out.i_codec != VLC_FOURCC( 'm', 'p', '2', 'a' ) &&
         !p_enc->b_force )
     {
         return VLC_EGENERIC;
